<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/dropbox_explanation"
		android:layout_marginBottom="5dip" android:textSize="15sp"
		android:layout_marginTop="5dip" android:layout_marginLeft="90dip"
		android:textStyle="bold" />

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/dropbox_login"
			android:layout_width="80dip" android:layout_height="wrap_content"
			android:id="@+id/login_email_prompt" android:paddingRight="10dip"
			android:textSize="15sp" />
		<EditText android:scrollHorizontally="true"
			android:inputType="textEmailAddress" android:id="@+id/login_email"
			android:maxLines="1" android:imeOptions="actionNext|flagNoExtractUi"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/dropbox_password"
			android:layout_width="80dip" android:layout_height="wrap_content"
			android:paddingRight="10dip" android:id="@+id/login_password_prompt"
			android:textSize="15sp" />
		<EditText android:scrollHorizontally="true"
			android:inputType="textPassword" android:id="@+id/login_password"
			android:maxLines="1" android:imeOptions="actionDone|flagNoExtractUi"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
	</LinearLayout>

	<Button android:text="@string/do_dropbox_login" android:id="@+id/login_submit"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/sync_frequency"
		android:layout_marginBottom="5dip" android:layout_marginTop="15dip"
		android:textSize="15sp" android:textStyle="bold"
		android:layout_marginLeft="90dip" />

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/sync_when_starting_app"
			android:layout_width="200dip" android:layout_height="wrap_content"
			android:paddingRight="10dip" android:textSize="15sp" />
		<CheckBox android:id="@+id/when_starting_app"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/sync_after_edit"
			android:layout_width="200dip" android:layout_height="wrap_content"
			android:paddingRight="10dip" android:textSize="15sp" />
		<CheckBox android:id="@+id/after_edit" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="" />
	</LinearLayout>

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/sync_periodically"
			android:layout_width="200dip" android:layout_height="wrap_content"
			android:paddingRight="10dip" android:textSize="15sp" />
		<CheckBox android:id="@+id/periodically"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="" />
	</LinearLayout>
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:text="@string/sync_periodically_minutes"
			android:layout_width="200dip" android:layout_height="wrap_content"
			android:paddingRight="10dip" android:textSize="15sp" />
		<Spinner android:id="@+id/minutes_spinner" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
