<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="5dip">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/newpage_name_entername" 	 />

	<EditText android:id="@+id/text1" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<LinearLayout android:orientation="horizontal" android:gravity="center"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/confirm" android:layout_width="fill_parent" android:text="@string/confirm"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/cancel" android:layout_width="wrap_content" android:text="@string/cancel"
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>