
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myapp="http://schemas.android.com/apk/res/com.janwillemboer.ema"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="horizontal"
		android:background="@android:color/darker_gray" android:paddingTop="4px"
		android:gravity="center_horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/button_back" android:layout_width="wrap_content"
			android:layout_height="36dip" android:textSize="12dip" android:text="@string/back"
			android:drawableLeft="@drawable/back" />

		<Button android:id="@+id/button_home" android:layout_width="wrap_content"
			android:layout_height="36dip" android:textSize="12dip" android:text="@string/home"
			android:drawableLeft="@drawable/gohome" />

		<Button android:id="@+id/button_edit" android:layout_width="wrap_content"
			android:layout_height="36dip" android:textSize="12dip" android:text="@string/edit"
			android:drawableLeft="@drawable/edit_select_all" />

		<Button android:id="@+id/button_sync" android:layout_width="wrap_content"
			android:layout_height="36dip" android:textSize="12dip" android:text="@string/sync"
			android:drawableLeft="@drawable/sync" />

	</LinearLayout>

	<WebView android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:id="@+id/webview0" />

	<WebView android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:id="@+id/webview1" android:visibility="gone" />
</LinearLayout>
